# bi.dencaps.com

./: .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  RENDERING_EXAMPLES.md  RENDERING_TECHNICAL.md  Start.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: analytics.rs  auth.rs  chat.rs  mod.rs  project.rs  rbac.rs  user.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rbac.rs
backend/src/models/: mod.rs
backend/src/services/: ai.rs  analytics.rs  chat.rs  mod.rs  project.rs  rbac.rs  user.rs
backend/src/utils/: jwt.rs  mod.rs
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/guards/: auth.guard.ts  permission.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/models/: index.ts  permission.model.ts
frontend/src/app/core/services/: analytics.service.ts  auth.service.ts  chat.service.ts  permission.service.ts  project.service.ts  token.service.ts  user-management.service.ts
frontend/src/app/features/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
frontend/src/app/features/demo/: rendering-demo.component.ts
frontend/src/app/features/roles/: role-list.html  role-list.scss  role-list.ts
frontend/src/app/features/users/: user-list.html  user-list.scss  user-list.ts
frontend/src/app/shared/layout/: layout.html  (+2 more)
(+25 files in other folders)
