[package]
name = "dencapsbi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
